积分余额小金库计算

--- a/tourist-web/src/main/webapp/view/wap/index.html
+++ b/tourist-web/src/main/webapp/view/wap/index.html
@@ -81,7 +81,7 @@
                     <div class="weui_tabbar_icon"><img src="../../assets/img/jchg.png" alt=""></div>
                     <p class="weui_tabbar_label">精彩回顾</p>
                 </a>
-                <a href="buyerApply.html" th:href="@{/wap/buyerApply}" class="weui_tabbar_item">
+                <a href="buyerApply.html" th:href="@{/wap/showMyInfo}" class="weui_tabbar_item">
                     <div class="weui_tabbar_icon"><img src="../../assets/img/sqcg.png" alt=""></div>
                     <p class="weui_tabbar_label">申请采购权</p>
                 </a>
