线路订单回调修改，订单详细页面优化

--- a/tourist-web/src/main/webapp/view/wap/procurementPayPage.html
+++ b/tourist-web/src/main/webapp/view/wap/procurementPayPage.html
@@ -66,7 +66,7 @@
                 <p class="weui_media_desc ztdx" th:text="'联系电话:'+${traveler.telPhone}">联系电话:1563232323</p>
                 <p class="weui_media_desc ztdx" th:text="'身份证号:'+${traveler.number}">身份证号:332325******256569</p>
             </div>
-            <div class="weui_media_box weui_media_text massgea">
+            <div class="weui_media_box weui_media_text massgea" th:remove="all">
                 <h4 class="weui_media_title"><span>里里</span>&nbsp;/&nbsp;<i
                         style="color: #808080; font-size: 12px; font-style: normal">女</i>
                 </h4>
@@ -74,7 +74,7 @@
                 <p class="weui_media_desc ztdx">联系电话:1563232323</p>
                 <p class="weui_media_desc ztdx">身份证号:332325******256569</p>
             </div>
-            <div class="weui_media_box weui_media_text massgea">
+            <div class="weui_media_box weui_media_text massgea" th:remove="all">
                 <h4 class="weui_media_title"><span>里里</span>&nbsp;/&nbsp;<i
                         style="color: #808080; font-size: 12px; font-style: normal">女</i>
                 </h4>
