--- a/tourist-web/src/main/webapp/view/manage/supplier/salesStatistics.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/salesStatistics.html
@@ -123,8 +123,7 @@
                                         <th data-field="touristName" data-align="center">商品名称</th>
                                         <th data-field="orderMoney" data-align="center"
                                             data-sortable="true">订单金额</th>
-                                        <th data-field="commission" data-align="center"
-                                            data-sortable="true">佣金</th>
+                                        <th data-field="commission" data-align="center">佣金</th>
                                         <th data-field="createTime" data-align="center"
                                             data-sortable="true">下单时间</th>
                                         <th data-field="payTime" data-align="center"
