--- a/tourist-web/src/main/webapp/view/manage/common/orderDetails.html
+++ b/tourist-web/src/main/webapp/view/manage/common/orderDetails.html
@@ -28,25 +28,25 @@
             <div class="ibox-content">
                 <div class="">
                     <div class="float-e-margins">
-                        <h1 th:text="'订单号：'+${order.orderNo}+'   '+${order.orderState.value}">订单号：1913233132131231    已支付 </h1>
+                        <h1 th:text="'订单号：'+${order.orderNo}+'      '+${order.orderState.value}">订单号：1913233132131231    已支付 </h1>
                     </div>
                     <div class="float-e-margins">
                         <label>订单操作：</label>
                         <button th:if="${order.orderState.code==1}"
-                                onclick="modifyOrderStatus(2,this)" class="btn btn-success">
-                            <span th:text="">确认订单</span>
+                                onclick="modifyOrderStatus(2)" class="btn btn-success">
+                            <span>确认订单</span>
                         </button>
                         <button th:if="${order.orderState.code==4}"
-                                onclick="modifyOrderStatus(1,this)" class="btn btn-success">
-                            <span th:text="">取消退款</span>
+                                onclick="modifyOrderStatus(1)" class="btn btn-success">
+                            <span>取消退款</span>
                         </button>
                         <button th:if="${order.orderState.code==1||order.orderState.code==2}"
-                                onclick="modifyOrderStatus(4,this)" class="btn btn-success">
-                            <span th:text="">申请退款</span>
+                                onclick="modifyOrderStatus(4)" class="btn btn-success">
+                            <span>申请退款</span>
                         </button>
                         <button th:if="${order.orderState.code==0}"
-                                onclick="modifyOrderStatus(6,this)" class="btn btn-success">
-                            <span th:text="">取消订单</span>
+                                onclick="modifyOrderStatus(6)" class="btn btn-success">
+                            <span>取消订单</span>
                         </button>
                     </div>
 
@@ -140,7 +140,7 @@
                 <label>购买人详情</label>
             </div>
             <div class="ibox-content">
-                <table class="table table-bordered">
+                <table th:if="${order.touristBuyer!=null}" class="table table-bordered">
                     <tr>
                         <th style="width: 150px">购买人姓名：</th>
                         <td th:text="${order.touristBuyer.nickname}">11</td>
@@ -153,7 +153,7 @@
                         <th>身份证号：</th>
                         <td th:text="${order.touristBuyer.IDNo}">11</td>
                     </tr>
-                    <tr>
+                    <tr th:if="${order.touristGood.touristSupplier!=null}">
                         <th>所属俱乐部名称：</th>
                         <td th:text="${order.touristGood.touristSupplier.supplierName}">22</td>
                     </tr>
@@ -184,10 +184,10 @@
                     <tr th:each="t:${travelers}">
                         <td th:text="${t.id}">11</td>
                         <td th:text="${t.name}">史利挺</td>
-                        <td th:text="${t.sex.value}">女</td>
+                        <td th:text="${t.sex==null?'':t.sex.value}">女</td>
                         <td th:text="${t.age}">25</td>
                         <td th:text="${t.telPhone}">18069874125</td>
-                        <td th:text="${t.IDNo}">330227199324595462</td>
+                        <td th:text="${t.number}">330227199324595462</td>
                         <td>
                             <a class="btn btn-success" onclick="modifyTravelerInfo(this)">修改</a>
                         </td>
@@ -259,6 +259,7 @@
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/iCheck/icheck.min.js"></script>
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
+    var orderId=/*[[${order.id}]]*/'1';
     var modifyOrderStateUrl=/*[[@{/base/modifyOrderState}]]*/'../../mock/supplier/orderDetails.json';
 
     var modifytouristInfoUrl=/*[[@{/base/modifyTravelerBaseInfo}]]*/'../../mock/supplier/orderDetails.json';
