--- a/tourist-web/src/main/webapp/view/wap/procurementPayPage.html
+++ b/tourist-web/src/main/webapp/view/wap/procurementPayPage.html
@@ -177,6 +177,7 @@
 <script th:inline="javascript">
     $.orderPayUrl = /*[[@{/wap/orderPay}]]*/ "../../mock/createTrade.json";
     $.touristUrl = /*[[${@environment.getProperty('tourist.url','http://test.xl.51flashmall.com')}]]*/ 'http://FUCK ME';
+    $.mallUrl = /*[[${@environment.getProperty('mall.url','http://cosytest.51flashmall.com')}]]*/ 'http://FUCK ME';
     /**
      * 此处为true则通过前端调用通知
      */
