--- a/tourist-web/src/main/webapp/view/wap/index.html
+++ b/tourist-web/src/main/webapp/view/wap/index.html
@@ -118,7 +118,7 @@
                                     号出发</span>
                                 <span style="float:right; margin-right:10px;color:#FF5558; font-size: 16px;"
                                       sec:authorize="hasRole('ROLE_BUYER')"
-                                      th:text="${'$'+good.price}">￥199</span>
+                                      th:text="${'￥'+good.price}">￥199</span>
                                 <p style="clear:both"></p>
                             </div>
                         </div>
