--- a/tourist-web/src/main/webapp/view/wap/recommendTourist.html
+++ b/tourist-web/src/main/webapp/view/wap/recommendTourist.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="zh-wz-time"><span sec:authorize="hasRole('ROLE_BUYER')"
                                                   style="float:left;color:#FF5558;font-size: 16px;padding: 8px 0px 3px 0px;"
-                                                  th:text="${'$'+good.price}">￥199
+                                                  th:text="${'￥'+good.price}">￥199
                     </span>
                         <p style="clear:both"></p>
                     </div>
