--- a/tourist-web/src/main/webapp/view/wap/destinationTourist.html
+++ b/tourist-web/src/main/webapp/view/wap/destinationTourist.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="zh-wz-time"><span
                             style="float:left;color:#FF5558;font-size: 16px;padding: 8px 0px 3px 0px;"
-                            sec:authorize="hasRole('ROLE_BUYER')" th:text="${'$'+good.price}">￥199
+                            sec:authorize="hasRole('ROLE_BUYER')" th:text="${'￥'+good.price}">￥199
                     </span>
                         <p style="clear:both"></p>
                     </div>
