修复支付bug,添加支付假装成功代码

--- a/tourist-web/src/main/webapp/view/wap/buyerApply.html
+++ b/tourist-web/src/main/webapp/view/wap/buyerApply.html
@@ -102,7 +102,7 @@
                         </ul>
                         <div class="weui_uploader_input_wrp">
                             <input class="weui_uploader_input" type="file" name="IDInverseUri" id="IDInverseUri"
-                                   accept="image/jpg,image/jpeg,image/png,image/gif" capture="camera" multiple>
+                                   accept="image/jpg,image/jpeg,image/png,image/gif"  multiple>
                         </div>
                     </div>
                 </div>
