--- a/tourist-web/src/main/webapp/view/manage/platform/resetPassword.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/resetPassword.html
@@ -98,7 +98,7 @@
         var newPassword = $("input[name='newPassword']").val();
         var affirmPassword = $("input[name='affirmPassword']").val();
         if (newPassword == "") {
-            layer.msg("请输入密码")
+            layer.msg("请输入密码");
             return;
         }
         if (affirmPassword != newPassword) {
