--- a/tourist-web/src/main/webapp/view/manage/supplier/resetSupplierPassword.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/resetSupplierPassword.html
@@ -113,7 +113,7 @@
             dataType: 'json',
             data: {oldPassword:oldPassword,newPassword:newPassword},
             success:function(result){
-                if(result.code==200){
+                if (result.data == 200) {
                     layer.msg("保存成功！");
                 }else {
                     layer.msg(result.message);
