--- a/tourist-web/src/main/webapp/view/manage/error.html
+++ b/tourist-web/src/main/webapp/view/manage/error.html
@@ -31,7 +31,7 @@
 <body class="gray-bg">
 <div class="middle-box text-center animated fadeInDown">
     <h1 th:text="${code}">500</h1>
-    <h3 class="font-bold" th:text="${message}">服务器内部错误</h3>
+    <h3 class="font-bold" th:text="${errorMsg}">服务器内部错误</h3>
 
     <div class="error-desc" th:text="${description}">
         服务器好像出错了...
